--- a/src/blocks/about-author/__avatar/about-author_avatar.css
+++ b/src/blocks/about-author/__avatar/about-author_avatar.css
@@ -1,6 +1,7 @@
 .about-author_avatar{
     border-radius: 1000px;
     margin-top: 5rem;
+    margin: 5rem 0 5rem 0;
     width: 29rem;
     height: 29rem;
     background-image: url(/src/images/Screenshot_1.png);
