--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 @import url(./blocks/search/search.css);
 @import url(./blocks/about-author/about-author.css);
 @import url(./blocks/news/news.css);
+@import url(./blocks/footer/footer.css);
 
 .button:focus {
     outline: none !important;
@@ -16,4 +17,7 @@
 }
 .input{
     padding-left:24px;
+}
+a{
+    text-decoration: none;
 }
