--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,15 @@
-@import url(./blocks/header/header.css);
-@import url(./blocks/root/root.css);
-@import url(./blocks/search/search.css);
-@import url(./blocks/about-author/about-author.css);
-@import url(./blocks/news/news.css);
-@import url(./blocks/footer/footer.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/root/root.css);
+@import url(../blocks/search/search.css);
+@import url(../blocks/about-author/about-author.css);
+@import url(../blocks/news/news.css);
+@import url(../blocks/footer/footer.css);
+
+
 
 .button:focus {
     outline: none !important;
