--- a/src/blocks/news/__button/news__button.css
+++ b/src/blocks/news/__button/news__button.css
@@ -12,3 +12,8 @@
     line-height: 24px;
     color: #1A1B22;
 }
+.news__button:hover{
+    background: #FFFFFF;
+    opacity: 0.9;
+    border-radius: 80px;
+}
