--- a/src/blocks/news/news.css
+++ b/src/blocks/news/news.css
@@ -10,14 +10,15 @@
 @import url(./__tltle/news__title.css);
 @import url(./__date/news__date.css);
 @import url(./__button/news__button.css);
+@import url(./__flag/news__flag.css);
 
 .news{
-display: flex;
-flex-direction: column;
-justify-content: center;
-background: #F5F6F7;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #F5F6F7;
 }
 
 .news_empty_hidden{
-display: none;
+    display: none;
 }
