feature { header, articles-info - articles }

--- a/src/css/articles.css
+++ b/src/css/articles.css
@@ -11,6 +11,7 @@
 @import url(../blocks/main/preloader/preloader.css);
 
 @import url(../blocks/articles/header/header.css);
+@import url(../blocks/articles/articles-info/articles-info.css);
 /* @import url(../blocks/articles/root/root.css);
 @import url(../blocks/articles/search/search.css);
 @import url(../blocks/articles/about-author/about-author.css);
