--- a/src/blocks/articles/header/header.css
+++ b/src/blocks/articles/header/header.css
@@ -3,7 +3,8 @@
 @import url(./__logo-text/header__logo-text.css);
 
 
-.header_articles{
-    background: #FFFFFF;
-    box-shadow: inset 0px -1px 0px #D1D2D6;
+.header{
+    position: relative;
+    background: #FFFFFF!important;
+    box-shadow: inset 0px -1px 0px #D1D2D6!important;
 }
