--- a/src/blocks/main/header/header.css
+++ b/src/blocks/main/header/header.css
@@ -16,4 +16,6 @@
     background: rgba(196, 196, 196, 0.01);
     box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
     border-bottom: rgba(196, 196, 196, 0.01) solid 1px;
+    max-width: 1440px;
+    margin: auto;
 }
