--- a/src/blocks/main/news/__tltle/news__title.css
+++ b/src/blocks/main/news/__tltle/news__title.css
@@ -7,5 +7,5 @@
     line-height: 46px;
     color: #1A1B22;
     width: 400px;
-    margin-left: calc((100vw - 1260px) / 2);
+    margin-left: 6.5rem;
 }
