--- a/src/blocks/main/root/root.css
+++ b/src/blocks/main/root/root.css
@@ -4,4 +4,6 @@
     font-family: 'Inter';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    max-width: 1440px;
+    margin: auto;
 }
