--- a/src/blocks/articles/news/__delete-button/news__delete-button.css
+++ b/src/blocks/articles/news/__delete-button/news__delete-button.css
@@ -11,3 +11,11 @@
 .news__delete-button:hover{
     background-image: url('~images/delete-icon-active.png');
 }
+
+@media (max-width:960px){
+    .news__delete-button{
+        top:0.5rem!important;
+        right:0.5rem!important;
+        bottom: 23.875rem!important;
+    }
+}
