--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,6 +10,8 @@
 @import url(../blocks/main/footer/footer.css);
 @import url(../blocks/main/preloader/preloader.css);
 @import url(../blocks/main/popup/popup.css);
+@import url(../blocks/main/mobile-menu/mobile-menu.css);
+
 
 
 @import url(./actions.css);
