--- a/src/blocks/main/news/__card-icon/news__card-icon.css
+++ b/src/blocks/main/news/__card-icon/news__card-icon.css
@@ -6,7 +6,13 @@
     border-top-left-radius: 15px;
 }
 
-@media (min-width:769px) and (max-width:1250px){
+@media (min-width:960px) and (max-width:1250px){
+    .news__card-icon{
+        height: 12.375rem!important;
+    }
+}
+
+@media (min-width:769px) and (max-width:960px){
     .news__card-icon{
         height: 9.375rem!important;
     }
