--- a/src/blocks/main/news/__card-place/news__card-place.css
+++ b/src/blocks/main/news/__card-place/news__card-place.css
@@ -6,7 +6,13 @@
     grid-gap: 1rem 1rem;
 }
 
-@media (min-width:769px) and (max-width:1250px){
+@media (min-width:960px) and (max-width:1250px){
+    .news__card-place{
+        grid-template-columns: repeat(3, 19rem)!important;
+    }
+}
+
+@media (min-width:769px) and (max-width:960px){
     .news__card-place{
         grid-template-columns: repeat(3, 14rem)!important;
     }
