--- a/src/blocks/main/popup/__content/popup__content.css
+++ b/src/blocks/main/popup/__content/popup__content.css
@@ -9,3 +9,16 @@
     justify-content: center;
     padding: 0 2.25rem 0;
 }
+
+@media (max-width: 455px){
+    .popup__content {
+        width: 100%;
+        bottom: 0;
+        margin-top:3.5625rem;
+        height: 92%;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        padding: 0 1rem 0;
+        justify-content: unset;
+    }
+}
