--- a/src/css/articles.css
+++ b/src/css/articles.css
@@ -10,10 +10,12 @@
 @import url(../blocks/main/footer/footer.css);
 @import url(../blocks/main/preloader/preloader.css);
 @import url(../blocks/main/popup/popup.css);
+@import url(../blocks/main/mobile-menu/mobile-menu.css);
 
 @import url(../blocks/articles/header/header.css);
 @import url(../blocks/articles/articles-info/articles-info.css);
 @import url(../blocks/articles/news/news.css);
+
 
 
 @import url(./actions.css);
