--- a/src/blocks/main/header/header.css
+++ b/src/blocks/main/header/header.css
@@ -3,6 +3,7 @@
 @import url(./__navigation/header__navigation.css);
 @import url(./__logo-text/header__logo-text.css);
 @import url(./__nav-button_current/header__nav-button_current.css);
+@import url(./__logout-icon/header__logout-icon.css);
 
 .header{
     position: absolute;
@@ -13,9 +14,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: rgba(196, 196, 196, 0.01);
-    box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
-    border-bottom: rgba(196, 196, 196, 0.01) solid 1px;
+    /* background: rgba(196, 196, 196, 0.01); */
+    /* box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2); */
+    /* border-bottom: rgba(196, 196, 196, 0.01) solid 1px; */
     max-width: 1440px;
     margin: auto;
 }
