--- a/src/blocks/main/popup/__alter-action/popup__alter-action.css
+++ b/src/blocks/main/popup/__alter-action/popup__alter-action.css
@@ -10,3 +10,8 @@
     height: 1.25rem;
     margin: 1rem auto 1.75rem;
 }
+
+.popup__alter-action_link{
+    color: #2F71E5;
+    margin: 1rem 0 1.75rem;
+}
