--- a/src/blocks/main/popup/popup.css
+++ b/src/blocks/main/popup/popup.css
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 .popup_hidden{
     display: none;
