--- a/src/blocks/main/popup/__button/popup__button.css
+++ b/src/blocks/main/popup/__button/popup__button.css
@@ -1,6 +1,6 @@
 .popup__button{
     border-radius: 100px;
-    width: 22.375rem;
+    width: 100%;
     height: 4rem;
     font-family: Roboto;
     font-style: normal;
@@ -15,6 +15,7 @@
 .popup__button_disable{
     color: #B6BCBF;
     background: #E6E8EB;
+    cursor: default!important;
 }
 
 @media (max-width: 455px){
