--- a/src/blocks/main/popup/popup.css
+++ b/src/blocks/main/popup/popup.css
@@ -6,6 +6,8 @@
 @import url(./__input-descriptor/popup__input-descriptor.css);
 @import url(./__input/popup__input.css);
 @import url(./__title/popup__title.css);
+@import url(./__error/popup__error.css);
+@import url(./__input-error/popup__input-error.css);
 
 .popup{
     position: fixed;
