--- a/src/blocks/main/news/__button/news__button.css
+++ b/src/blocks/main/news/__button/news__button.css
@@ -1,7 +1,7 @@
 .news__button{
     background: #FFFFFF;
     border-radius: 80px;
-    margin: 3.5rem auto 5rem;
+    margin: 0 auto 5rem;
     width: 18rem;
     height: 4rem;
     border:none;
@@ -14,4 +14,18 @@
 }
 .news__button:hover{
     opacity: 0.9;
+}
+.news__button_hidden{
+    display: none;
+}
+@media (max-width:768px){
+    .news__button{
+        margin-bottom: 2.5rem;
+    }
+}
+
+@media (max-width:486px){
+    .news__button{
+        margin-bottom: 2rem;
+    }
 }
