--- a/src/blocks/main/news/__card-place/news__card-place.css
+++ b/src/blocks/main/news/__card-place/news__card-place.css
@@ -5,6 +5,7 @@
     grid-template-columns: repeat(3, 25rem);
     grid-gap: 1rem 1rem;
     overflow: hidden;
+    margin-bottom: 3.5rem;
 }
 
 @media (min-width:960px) and (max-width:1250px){
@@ -22,7 +23,7 @@
 
 @media (max-width:768px){
     .news__card-place{
-        margin: 4rem auto 0;
+        margin: 4rem auto 1.375rem;
         grid-template-columns: repeat(3, 14rem)!important;
         grid-gap: 1rem 1rem;
     }
@@ -36,6 +37,7 @@
 
 @media (max-width:486px){
     .news__card-place{
+        margin-top: 1rem;
         grid-template-columns: repeat(1, 18rem)!important;
         grid-gap: 9px 1rem!important;
     }
