--- a/src/blocks/articles/news/__delete-button/news__delete-button.css
+++ b/src/blocks/articles/news/__delete-button/news__delete-button.css
@@ -8,7 +8,7 @@
     height: 2.5rem;
     width: 2.5rem;
 }
-.news__delete-button:hover{
+.news__delete-button_active{
     background-image: url('~images/delete-icon-active.png');
 }
 
