--- a/src/blocks/articles/header/__navigation/header__navigation.css
+++ b/src/blocks/articles/header/__navigation/header__navigation.css
@@ -1,9 +1,9 @@
-.header__navigation{
+.header__navigation_articles{
     display: flex;
 }
 
 @media(max-width:700px){
-    .header__navigation{
+    .header__navigation_articles{
         background-image: url(~images/menu-black.svg);
     }
 }
